--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,16 @@
   color: #61dafb;
 }
 
+.card-img-top {
+  height: 180px;
+  object-fit: cover;
+}
+
+.card-body {
+  min-height: 150px;
+}
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
